--- a/alby/alby.csproj
+++ b/alby/alby.csproj
@@ -53,6 +53,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Content.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Content.Designer.cs">
+      <DependentUpon>Content.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +69,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Song.cs" />
+    <EmbeddedResource Include="Content.resx">
+      <DependentUpon>Content.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
